@@ -105,12 +105,12 @@ class IOSUIViewController extends GLKViewController {
 	}
 
 	@Override
-	public boolean prefersStatusBarHidden() {
+	public boolean prefersStatusBarHidden () {
 		return !app.config.statusBarVisible;
 	}
 	
 	@Override
-	public boolean prefersHomeIndicatorAutoHidden() {
+	public boolean prefersHomeIndicatorAutoHidden () {
 		return app.config.hideHomeIndicator;
 	}
 }
