@@ -125,7 +125,12 @@ public class IOSGraphics extends NSObject implements Graphics, GLKViewDelegate, 
 				app.listener.resize(graphics.width, graphics.height);
 			}
 		}
-		
+
+		@Override
+		public boolean prefersStatusBarHidden () {
+			return !app.config.statusBarVisible;
+		}
+
 		@Override
 		public boolean prefersHomeIndicatorAutoHidden() {
 			return app.config.hideHomeIndicator;
